# datasheet2svd

./: .gitignore  Cargo.toml  Makefile  README.md  V850.svd  example.svd  requirements.txt  v850.svd
datasheets/renesas/v850/csv/: 217-218.csv  432-437.csv  70-72.csv  76-82.csv  85-102.csv  validate.sh
src/: datasheet.rs  lib.rs  main.rs  svd.rs
