[package]
name = "v850-svd"
version = "0.1.0"
authors = ["Roman Valls Guimera <brainstorm@nopcode.org>"]
edition = "2018"

[dependencies]
yaserde = { version = "0.6.0", path = "../../yaserde/yaserde" }
yaserde_derive = { version = "0.6.0", path = "../../yaserde/yaserde_derive" }
xml-rs = "0.8.3"
log = "0.4"